fdo#88578: Focus on first checkbox when showing calc paste special dialog

Reviewed-on: https://gerrit.libreoffice.org/14071
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 83133f175c021b3f139c596a771b56d94cb3ed11)

Change-Id: Ic0d82c710c09a099329fa76e2fb81c6c8613b334